--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ footer{padding:2.2rem 5vw;background:var(--bg2);border-top:1px solid var(--borde
 .policy-meta{font-size:.64rem;font-weight:600;letter-spacing:.14em;text-transform:uppercase;color:var(--rose);margin-bottom:1.8rem;padding-bottom:.85rem;border-bottom:1px solid var(--border);}
 
 /* ══ SCROLL REVEAL ══ */
-.reveal{opacity:0;transform:translateY(20px);transition:opacity .85s ease,transform .85s ease;}
+.reveal{opacity:1;transform:translateY(0);transition:opacity .85s ease,transform .85s ease;}
 .reveal.vis{opacity:1;transform:translateY(0);}
 
 /* ══ RESPONSIVE ══ */
