--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ h1 .pulse{color:var(--rose);animation:textPulse 2.5s ease-in-out infinite;}
 #advisor{padding:0;background:var(--bg);}
 .adv-grid{display:grid;grid-template-columns:1fr 1fr;}
 .adv-img{position:relative;overflow:hidden;min-height:520px;}
-.adv-img-bg{position:absolute;inset:0;background:url('https://images.pexels.com/photos/5792656/pexels-photo-5792656.jpeg?auto=compress&cs=tinysrgb&w=800') center center/cover no-repeat;filter:brightness(.72) saturate(.88);transition:transform .8s;}
+.adv-img-bg{position:absolute;inset:0;background:url('https://assets/chris-executive-dating.jpg) auto=compress&cs=tinysrgb&w=800') center center/cover no-repeat;filter:brightness(.72) saturate(.88);transition:transform .8s;}
 .adv-img:hover .adv-img-bg{transform:scale(1.04);}
 .adv-img::after{content:'';position:absolute;inset:0;background:linear-gradient(to right,transparent 40%,var(--bg) 100%),linear-gradient(to top,rgba(5,5,5,.5),transparent 50%);}
 .adv-content{background:var(--bg);padding:6rem 6vw 6rem 4vw;display:flex;flex-direction:column;justify-content:center;}
