--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ section{position:relative;z-index:3;}
 /* ══ HERO ══ */
 #home{min-height:100vh;display:grid;grid-template-columns:1fr 1fr;padding-top:60px;overflow:hidden;}
 .hero-left{display:flex;flex-direction:column;justify-content:center;padding:5rem 4vw 4rem 6vw;background:var(--bg);position:relative;}
-.hero-left::before{content:'';position:absolute;left:0;top:8%;bottom:8%;width:3px;background:linear-gradient(to bottom,transparent,var(--crimson) 30%,var(--gold) 70%,transparent);}
+.hero-left::before{content:'';position:absolute;left:0;top:8%;bottom:8%;width:3px;background:linear-gradient(to bottom,transparent,vcooar(--crimson) 30%,var(--gold) 70%,transparent);}
 h1{font-family:'Cormorant Garamond',serif;font-size:clamp(2.4rem,5vw,5rem);font-weight:700;line-height:1.03;color:#fff;margin-bottom:1.8rem;}
 h1 em{font-style:italic;color:var(--gold);}
 h1 .pulse{color:var(--rose);animation:textPulse 2.5s ease-in-out infinite;}
