--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ h1 .pulse{color:var(--rose);animation:textPulse 2.5s ease-in-out infinite;}
 .hero-right{position:relative;overflow:hidden;min-height:600px;}
 .hero-bg{position:absolute;inset:0;background:
   linear-gradient(105deg,var(--bg) 0%,rgba(5,5,5,.2) 50%,transparent 100%),
-  url('assets/hero.jpg') center/cover no-repeat;
+  url('assets/hero.png') center/cover no-repeat;
   animation:heroZoom 22s ease-in-out infinite alternate;}
 @keyframes heroZoom{from{transform:scale(1);}to{transform:scale(1.06);}}
 .hero-bg::after{content:'';position:absolute;inset:0;background:radial-gradient(ellipse at 65% 50%,rgba(155,28,46,.18),transparent 65%);}
