--- a/index.html
+++ b/index.html
@@ -440,25 +440,98 @@ footer{padding:2.2rem 5vw;background:var(--bg2);border-top:1px solid var(--borde
 .reveal.vis{opacity:1;transform:translateY(0);}
 
 /* ══ RESPONSIVE ══ */
-@media(max-width:1100px){
-  .nav-links{display:none;}.ham{display:flex;}
-  #home{grid-template-columns:1fr;}.hero-right{min-height:55vw;}
-  .hero-left{padding:4rem 5vw 3rem;}.hero-left::before{display:none;}
+
+/* Tablet + small desktop */
+@media (max-width:1100px){
+  .nav-links{display:none;}
+  .ham{display:flex;}
+
+  #home{grid-template-columns:1fr;}
+  .hero-right{min-height:55vw;}
+  .hero-left{padding:4rem 5vw 3rem;}
+  .hero-left::before{display:none;}
+
   #philosophy,#membership,#advisor{grid-template-columns:1fr;}
   .phil-img,.mem-img,.adv-img{min-height:360px;}
+
   .mem-img::after{background:linear-gradient(to top,var(--bg2),transparent 60%);}
   .adv-img::after{background:linear-gradient(to top,var(--bg),transparent 60%);}
+
   .adv-content{padding:4rem 5vw;}
   .mem-content{padding:4rem 5vw;}
-  .steps{grid-template-columns:1fr 1fr;gap:2.5rem;}.steps::before{display:none;}
-  .diff-grid{grid-template-columns:1fr 1fr;}.t-grid{grid-template-columns:1fr;}
-  .disc-grid{grid-template-columns:1fr 1fr;}.apply-grid{grid-template-columns:1fr;gap:3rem;}
-  .c-grid{grid-template-columns:1fr;gap:3rem;}.blog-grid{grid-template-columns:1fr;}
-  .faq-grid{grid-template-columns:1fr;}.pay-grid{grid-template-columns:1fr;}
-  .gallery{grid-template-columns:1fr 1fr;grid-template-rows:220px 220px;}.gi.tall{grid-row:span 1;}
+
+  .steps{grid-template-columns:1fr 1fr;gap:2.5rem;}
+  .steps::before{display:none;}
+
+  .diff-grid{grid-template-columns:1fr 1fr;}
+  .t-grid{grid-template-columns:1fr;}
+
+  .disc-grid{grid-template-columns:1fr 1fr;}
+  .apply-grid{grid-template-columns:1fr;gap:3rem;}
+  .c-grid{grid-template-columns:1fr;gap:3rem;}
+  .blog-grid{grid-template-columns:1fr;}
+
+  .faq-grid{grid-template-columns:1fr;}
+  .pay-grid{grid-template-columns:1fr;}
+
+  .gallery{
+    grid-template-columns:1fr 1fr;
+    grid-template-rows:220px 220px;
+  }
+  .gi.tall{grid-row:span 1;}
+
   .bmodal-inner,.policy-inner{padding:2rem;margin:1.5rem;}
-  footer{flex-direction:column;align-items:flex-start;}.f-leg{text-align:left;}
+
+  footer{flex-direction:column;align-items:flex-start;}
+  .f-leg{text-align:left;}
+
   .vid-poster-wrap{height:320px;}
+}
+
+/* Mobile */
+@media (max-width:640px){
+  /* General spacing / type */
+  .hero-left{padding:3.25rem 5vw 2.5rem;}
+  .hero-right{min-height:70vw;}
+
+  /* If your big hero headline is too large on phone, these help */
+  .kicker{letter-spacing:.12em;}
+  h1{font-size:clamp(2.1rem,7vw,3rem);line-height:1.05;}
+  .sub{font-size:1rem;line-height:1.6;}
+
+  /* Single-column grids everywhere that felt cramped */
+  .steps{grid-template-columns:1fr;gap:1.5rem;}
+  .diff-grid{grid-template-columns:1fr;gap:1.5rem;}
+  .disc-grid{grid-template-columns:1fr;gap:1.5rem;}
+  .gallery{grid-template-columns:1fr;grid-template-rows:220px;}
+  .gi{min-height:220px;}
+
+  /* Reduce tall image blocks */
+  .phil-img,.mem-img,.adv-img{min-height:260px;}
+
+  /* Advisor section: ensure image sits ABOVE text and doesn't feel cropped */
+  #advisor{grid-template-columns:1fr;}
+  .adv-img{
+    width:100%;
+    min-height:260px;
+  }
+  /* If you have a background-image helper class, this keeps the face visible */
+  .adv-img-bg{
+    background-position:65% center;
+    background-size:cover;
+  }
+
+  .adv-content,.mem-content{padding:2.75rem 5vw;}
+
+  /* Cards / modals */
+  .bmodal-inner,.policy-inner{padding:1.25rem;margin:1rem;}
+
+  /* Video poster */
+  .vid-poster-wrap{height:240px;}
+
+  /* Footer */
+  footer{gap:1.25rem;}
+}
 }
 @media(max-width:640px){
   h1{font-size:2.1rem;}h2{font-size:1.8rem;}
